apps/homectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homectl
  namespace: default
  annotations:
    secret.reloader.stakater.com/reload: "homectl-server-env"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homectl
  template:
    metadata:
      labels:
        app: homectl
    spec:
      containers:
        - name: homectl
          image: ghcr.io/fruitiex/homectl:main@sha256:4bcd031b93d0c92fe2ffb215044269ba7c70b4c4133690fe1d8d3daafbbd9e9f
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - name: http
              containerPort: 45289
          workingDir: /app
