apps/homectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homectl
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: homectl
  ports:
  - name: http
    protocol: TCP
    port: 45289
    targetPort: http
