apps/homectl/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homectl
  namespace: default
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - homectl.fruitiex.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homectl
          port: 45289
      timeouts:
        request: 0s
